# conan_with_cmake_CI

./: .gitignore  CMakeLists.txt  CMakeListsInvokeConan.txt  InvokeConan.cmake  README.md  SetupConan.cmake  build_std.yml  conanfile.txt  invoke_conan.cmake  notes.txt  rebuild.sh  rebuild_conan.sh
.github/workflows/: build_cmake.yml  build_std.yml
algos/: counting_sort.h  lower_bound.h  suffix_array.h  topo_sort.h  utils.h
src/: dummy.cpp
test/: lower_bound_test.cpp  topo_sort_test.cpp
